# NITA

./: .gitignore  .gitmodules
1st/: .gitignore  Basic.c  Basic.i  Basic.s  BubbleSort.c  Calculator.c  CallByValueVSRef.c  Factorial.c  Fibonacci.c  Floyd_sTriangle.c  LinearSearch.c  Loops.c  Math.c  MatrixMultiplication.c  MatrixSum.c  Prime.c  ReverseNum.c  Series.c  array.c  calloc.c  gcd.c  malloc.c  pyramid.c
1st/PlayerManagementSystem/: main.c
3rd/: ArrayOps.c  Arrays.c  DynamicMAlloc.c  Pointers.c  Pointers2.c  Searching.cpp  Sorting.cpp  Strings.c  Struct.c
3rd/Assignment/: BaseConversion.c  Basic.c  NumPyramid.c  Sorting.c  SumPrime.c  prng.c
3rd/DataStructures/: CMakeLists.txt  main.c  main.h  makefile
3rd/DataStructures/Arrays/: arrays.c  arrays.h
3rd/DataStructures/Graph/: graph.h
3rd/DataStructures/Linear/LinkedLists/: dlinkedlist.c  dlinkedlist.h  linkedlist.c  linkedlist.h
3rd/DataStructures/Linear/Queues/: deque.c  deque.h  queue.c
3rd/DataStructures/Linear/Stacks/: gstack.c  stack.c  stack.h
3rd/DataStructures/LinkedList/: linked_list.c  linked_list.h
3rd/DataStructures/Tree/: Tree.c  tree.h
3rd/DataStructures/Trees/: tree.c  tree.h
3rd/DataStructures/Trees/Binary/: bstree.c  bstree.h  btree.c  btree.h
3rd/DataStructures/Trees/Binary/Heap/: heap.c  heap.h
3rd/DataStructures/lib/DStruct/: CMakeLists.txt  README.md  generate_includes.cmake
3rd/DataStructures/lib/DStruct/Documentation/: HowToUse.md  Introduction.md
3rd/DataStructures/lib/DStruct/Linear/LinkedLists/: dlinkedlist.c  dlinkedlist.h  linkedlist.c  linkedlist.h
3rd/DataStructures/lib/DStruct/Linear/Queues/: gqueue.c  gqueue.h  queue.h
3rd/DataStructures/lib/DStruct/Linear/Stacks/: gstack.h
3rd/DataStructures/lib/DStruct/Trees/Binary/Heap/: heap.h
3rd/Lab/: ArrayOps.c  DynamicMAlloc.c  GrabRAM.c  LinkedListOps.c  OrderedLinkedList.c  Pointers.c  Pointers2.c  Searching.c  Struct.c  Struct2.c  Timing.c
4th/: NonEng.js  URLFinder.js
4th/Algo/: ExtendedGCD.cpp  FractionalKnapsack.cpp  Huffman.cpp  Knapsack10.cpp  StringMatcher.cpp
4th/Algo/Graphs/: BellmanFord.cpp  Dijkstra.cpp  Djikstra.cpp  FloydWarshall.cpp  MST.cpp  Traversal.cpp
4th/Algo/SortingComparator/: SortingComparator.cpp
4th/OOP/: 1stDay.cpp  Casting.cpp  Constructors.cpp  Friend.cpp  Functions.cpp  OODesign.cpp
5th/OS/: GuessNum.py  IPC.py  JobScheduling.py  MLSchedule.py  Threads.cpp  basic.py  forking.py  loops.sh
5th/OS/Deadlock/: Deadlock.py
5th/OS/DiskScheduling/: DiskScheduling.py
5th/OS/FileAllocation/: FileAllocation.py
5th/OS/MemoryManagement/: MemManage.py
5th/OS/PageReplacement/: PageReplacement.py
5th/OS/Scheduling/: JobScheduling.py
6th/: RegEx.py
6th/ArithmeticParserPLY/: Parser.py  parsetab.py
6th/DFA/: dfa.py  dfa_astarb.gv
6th/Lark/: Lark.py
6th/LexerPLY/: identifiers.txt  lexer.py  numbers.txt  operators.txt
6th/OpValidation/: OperatorValidation.py  input.txt
6th/Tokenize/: Tokenize.py  delete_lines.txt  destination.txt  input.txt  report.txt  source.txt
